handler getLyrics done✅
